[tool.poetry]
name = "tpml"
version = "0.1.0"
description = ""
authors = ["Tom Pinder <tompinder@live.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
numpy = "^1.20.0"
multipledispatch = "^0.6.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
